# rust_microservice

./: .gitignore  README.md  docker-compose.yml
api-gateway/: Cargo.toml  Dockerfile  config.toml
api-gateway/migrations/2023-08-30-011536_create_logs/: down.sql  up.sql
api-gateway/migrations/2023-09-11-025030_user/: down.sql  up.sql
api-gateway/src/: config.rs  main.rs  model.rs  rate_limit.rs  schema.rs  service.rs  utils.rs
auth-service/: .dockerignore  .env.docker  Cargo.toml  Dockerfile
auth-service/migrations/2023-08-01-070009_user/: down.sql  up.sql
auth-service/src/: handler.rs  main.rs  middleware.rs  model.rs  public_key.pem  public_key_refresh.pem  route.rs  schema.rs  utils.rs
genkey_service/: Cargo.toml
genkey_service/migrations/2023-10-11-030932_access_key/: down.sql  up.sql
genkey_service/src/: db.rs  handler.rs  main.rs  middleware.rs  model.rs  public.pem  rate_limit.rs  route.rs  schema.rs  utils.rs
graphql_nosql_user/: Cargo.toml
graphql_nosql_user/src/: config.rs  handler.rs  main.rs
graphql_nosql_user/src/schemas/: fixed.rs  mod.rs  root.rs  user.rs
notification_service/: .env.docker  Cargo.toml  Dockerfile
notification_service/migrations/2023-09-11-025030_noti/: down.sql  up.sql
notification_service/src/: handler.rs  kafka.rs  main.rs  model.rs  recipient.rs  schema.rs  utils.rs
post_service/: .env.docker  Cargo.toml  Dockerfile
post_service/migrations/2023-09-11-025030_posts/: up.sql
post_service/src/: handlers.rs  kafka.rs  main.rs  middlewares.rs  models.rs  schema.rs  utils.rs
user_service/: .env.docker  Cargo.toml  Dockerfile
user_service/migrations/2023-09-11-025030_user/: up.sql
user_service/src/: main.rs  middleware.rs  middleware_is_admin.rs  schema.rs  utils.rs
user_service/src/handler/: department.rs  group.rs  mod.rs  user.rs  user_department.rs
user_service/src/model/: auth.rs  department.rs  group.rs  mod.rs  user.rs  user_department.rs
user_service/src/routes/: department.rs  group.rs  user.rs  user_department.rs
