[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.10", features = ["full"] }
regex = "1.7.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.16.1", features = ["full"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }