[package]
name = "graphql_nosql_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.19"
log = "0.4"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.0"
juniper = "0.15"
lazy_static = "1.4.0"
bson = "2.4"
uuid = { version = "1", features = ["v4", "serde"] }
mongodb = "2.6.1"
cors = "0.1.0"
actix-cors = "0.6.4"
