[package]
name = "notification_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.0"
log = "0.4.1"
rdkafka = { version = "0.25", features = ["cmake-build"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
