[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bson = { version = "^2.4", default-features = false, features = [ "chrono-0_4" ] }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
diesel_derives = "2.0.2"
dotenv = "0.15.0"
env_logger = "0.9.0"
random-string = "1.0.0"
regex = "1.9.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.2.2"
jsonwebtoken = "8.3.0"
futures-util = "0.3.28"
